# qmake2cmake

./: CMakeLists.txt  README.md  converter.cpp  converter.h  main.cpp  qm2cm.cpp  qm2cm.h  qm2cm.ui
